src/include/yices_types.h


typedef int32_t term_t;
typedef int32_t type_t;
typedef struct model_s model_t;
typedef struct term_vector_s {
  uint32_t capacity;
  uint32_t size;
  term_t *data;
} term_vector_t;
typedef enum yval_tag {
  YVAL_UNKNOWN,
  YVAL_BOOL,
  YVAL_RATIONAL,
  YVAL_ALGEBRAIC,
  YVAL_FINITEFIELD,
  YVAL_BV,
  YVAL_SCALAR,
  YVAL_TUPLE,
  YVAL_FUNCTION,
  YVAL_MAPPING
} yval_tag_t;
typedef struct yval_s {
  int32_t node_id;
  yval_tag_t node_tag;
} yval_t;
typedef struct yval_vector_s {
  uint32_t capacity;
  uint32_t size;
  yval_t *data;
} yval_vector_t;
typedef enum yices_gen_mode {
  YICES_GEN_DEFAULT,
  YICES_GEN_BY_SUBST,
  YICES_GEN_BY_PROJ,        
  YICES_GEN_BY_PROJ_WIDE,   
} yices_gen_mode_t;